// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(List)>
    <List
      ariaSelectionStyle="none"
      dividerStyle="none"
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      paddingStyle="none"
      role="none"
    >
      <ul
        className="list orion-fusion-theme"
        role="list"
      />
    </List>
  </InjectIntl(List)>
</ThemeContextProvider>
`;

exports[`should render with ariaDescribedBy 1`] = `
<div
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <p
    id="list-help"
  >
     Navigate this list using the arrow keys. 
  </p>
  <InjectIntl(List)
    ariaDescribedBy="list-help"
  >
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="123"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="124"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="125"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="126"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="127"
    />
  </InjectIntl(List)>
</div>
`;

exports[`should render with ariaDescribedBy 2`] = `
<div
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <p
    id="list-help"
  >
     Navigate this list using the arrow keys. 
  </p>
  <InjectIntl(List)
    ariaDescribedBy="list-help"
  >
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="123"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="124"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="125"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="126"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="127"
    />
  </InjectIntl(List)>
</div>
`;

exports[`should render with ariaDescription 1`] = `
<ul
  aria-description="Navigate this list using the arrow keys."
  className="list"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with ariaDescription 2`] = `
<List
  ariaDescription="Navigate this list using the arrow keys."
  ariaSelectionStyle="none"
  dividerStyle="none"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  paddingStyle="none"
  role="none"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</List>
`;

exports[`should render with ariaDetails 1`] = `
<div
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <p
    id="list-details"
  >
     Here is some more information about this list. 
  </p>
  <InjectIntl(List)
    ariaDetails="list-details"
  >
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="123"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="124"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="125"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="126"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="127"
    />
  </InjectIntl(List)>
</div>
`;

exports[`should render with ariaDetails 2`] = `
<div
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
>
  <p
    id="list-details"
  >
     Here is some more information about this list. 
  </p>
  <InjectIntl(List)
    ariaDetails="list-details"
  >
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="123"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="124"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="125"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="126"
    />
    <ListItem
      hasChevron={false}
      isSelectable={false}
      isSelected={false}
      key="127"
    />
  </InjectIntl(List)>
</div>
`;

exports[`should render with bottom only divided items 1`] = `
<ul
  className="list divider-bottom-only"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with items 1`] = `
<ul
  className="list"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with no items 1`] = `
<ul
  className="list"
  role="list"
/>
`;

exports[`should render with standard divided items 1`] = `
<ul
  className="list divider-standard"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with standard padded items 1`] = `
<ul
  className="list padding-standard"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;

exports[`should render with thin padded items 1`] = `
<ul
  className="list padding-compact"
  role="list"
>
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</ul>
`;
